prod/kcl-api-eks-cluster/5-1-ingress-external.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "ingress-kcl-external-api"
  namespace: api
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/load-balancer-attributes: routing.http.drop_invalid_header_fields.enabled=true,deletion_protection.enabled=true
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/security-groups: kcl-alb-security-groups
    alb.ingress.kubernetes.io/subnets: 	subnet-123456789, subnet-1234567890
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:012345678:certificate/abcdefghi
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: "kcl-api-svc"
                port:
                  number: 8080
